--- a/style.css
+++ b/style.css
@@ -1,19 +1,20 @@
 body {
   width: 960px;
+  margin:auto;
 }
 
 main {
-  font-family: ariel;
+  font-family: helvetica;
 }
 
-main header nav section div footer{
-    margin: auto;
-    height: 100px;
-
+header {
+  width: 60%;
+  height: 100px;
+  margin-top: 20px;
 }
 
 nav {
-  margin: 20 px
+  margin: 20px;
 }
 
 .styled-select {
